# zpg-test

./: .gitignore  .gitmodules  README-LINUX.md  README-MACOS.md  README-WINDOWS.md  README.md
src/: CMakeLists.txt  ZPGproject.sln
src/Launcher/: Launcher.cpp  Launcher.txt  Launcher.vcxproj  Launcher.vcxproj.filters  MyShader.cpp  MyShader.h  MyVBO.cpp  MyVBO.h  MyVertexShader.cpp  MyVertexShader.h  data.cpp
src/Xresources/: 03_fragmentLambertian.shader  03_fragmentLambertian_singleLight.shader  03_fragmentPhong.shader  03_vertexNormals.shader  04_fragmentLambertian.shader  04_fragmentSingleColor.shader  ModelLetters.h  ModelLibrary.h  Xresources.vcxproj  Xresources.vcxproj.filters  basicModelResources.cpp  basicModelResources.h  basicShaderResources.cpp  tmpResources.cpp  tmpResources.h  vertexTMP.shader
src/appcore/: AppMath.cpp  AppMath.h  AppMath.tpp  AppUtils.cpp  AppUtils.h  AppUtils.tpp  CMakeLists.txt  Config.cpp  Config.h  DeltaTime.cpp  DeltaTime.h  Observer.h  Observer.tpp  ObserverSubject.h  ObserverSubject.tpp  appcore.vcxproj  appcore.vcxproj.filters  callbacks.cpp  callbacks.h
src/enc_temp_folder/878dab5b9dab12c44a681c5c3e29c59/: letters.cpp
src/examples/01/: 01.vcxproj  CMakeLists.txt
src/examples/03/: 03.vcxproj  03.vcxproj.filters  CMakeLists.txt  main.cpp
src/examples/04a-multilight/: 04a-multilight.vcxproj  04a-multilight.vcxproj.filters  CMakeLists.txt  PhongFragmentShader.glsl  PhongVertexShader.glsl  main.cpp
src/examples/04b-reflector/: 04b-reflector.vcxproj  04b-reflector.vcxproj.filters  CMakeLists.txt
src/examples/05a-texture/: 05a-texture.vcxproj  05a-texture.vcxproj.filters  CMakeLists.txt  Source.cpp
src/examples/05b-multipletextures/: 05b-multipletextures.vcxproj  05b-multipletextures.vcxproj.filters  CMakeLists.txt  PhongFragmentShader.glsl  PhongVertexShader.glsl  Source.cpp
src/examples/05c-cubemap/: 05c-cubemap.vcxproj  CMakeLists.txt  Source.cpp
src/examples/05d-assimpexample/: 05d-assimpexample.vcxproj  05d-assimpexample.vcxproj.filters  CMakeLists.txt  PhongFragmentShader.glsl  main.cpp
src/examples/06a-simplepicking/: 06a-simplepicking.vcxproj  06a-simplepicking.vcxproj.filters  CMakeLists.txt  Source.cpp
src/examples/06b-bezier/: 06b-bezier.vcxproj  06b-bezier.vcxproj.filters  CMakeLists.txt  bezier.cpp
src/gl3rd/: CMakeLists.txt  ShaderLoader.cpp  gl3rd.vcxproj  gl3rd.vcxproj.filters
src/gloo/: CMakeLists.txt  Camera.cpp  Camera.h  Controler.cpp  Controler.h  Controller.cpp  Controller.h  Drawable.h  FragmentShader.cpp  FragmentShader.h  IBO.cpp  IBO.h  Light.cpp  Light.h  Light.tpp  LightFactory.cpp  LightFactory.h  LightFlashlight.cpp  LightFlashlight.h  LightWarehouse.cpp  LightWarehouse.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  ModelFactory.tpp  ModelFireball.cpp  ModelFireball.h  ModelFireballBouncing.cpp  ModelFireballBouncing.h  ModelFirefly.cpp  ModelFirefly.h  ModelLightEmitting.cpp  ModelLightEmitting.h  ModelWarehouse.cpp  ModelWarehouse.h  ModelWarehouse.tpp  Renderer.cpp  Renderer.h  Scene.cpp  (+54 more)
src/launcher/: Application.cpp  Application.h  CMakeLists.txt  ModelFactory.cpp  ModelFactory.h  ModelVault.cpp  ModelVault.h  ModelVaultOBSOLETE.cpp  ModelVaultOBSOLETE.h  MyShaderProgram.cpp  MyShaderProgram.h  SceneBuilder.cpp  SceneBuilder.h  SceneBuilder.tpp  SceneBuilderPlugin.cpp  SceneBuilderPlugin.h  SceneBuilderPlugin01.cpp  SceneBuilderPlugin01.h  SceneBuilderPlugin02a.cpp  SceneBuilderPlugin02a.h  SceneBuilderPlugin02b.cpp  SceneBuilderPlugin02b.h  SceneBuilderPlugin02woods.cpp  SceneBuilderPlugin02woods.h  SceneBuilderPlugin03.cpp  SceneBuilderPlugin03.h  SceneBuilderPlugin04.cpp  SceneBuilderPlugin04.h  SceneBuilderPlugin05a.cpp  SceneBuilderPlugin05a.h  SceneBuilderPlugin05b.cpp  SceneBuilderPlugin05b.h  SceneBuilderPlugin05c.cpp  SceneBuilderPlugin05c.h  SceneBuilderPlugin06.cpp  SceneBuilderPlugin06.h  SceneBuilderPluginEmptyScene.cpp  SceneBuilderPluginEmptyScene.h  SceneBuilderPluginMenu.cpp  SceneBuilderPluginMenu.h  (+27 more)
src/models/: letters.cpp  letters.h  models.vcxproj  models.vcxproj.filters
src/resources/: 03_fragmentLambertian.shader  03_fragmentLambertian_singleLight.shader  03_fragmentPhong.shader  03_fragmentPhong_singleLight.shader  03_vertexNormal.shader  03_vertexNormals.shader  04_fragmentLambertian.shader  04_fragmentPhong.shader  04_fragmentSingleColor.shader  ModelLetters.cpp  ModelLetters.h  ModelLibrary.cpp  ModelLibrary.h  basicModelResources.cpp  basicModelResources.h  basicShaderResources.cpp  fragmentLambertian.shader  fragmentPhong.shader  fragmentTMP.shader  resources.vcxproj  resources.vcxproj.filters  vertexNormal.shader  vertexTMP.shader
src/resources/fonts/: README.txt
src/resources/models.inc/: skydome.h
src/resources/models.obj/: README.txt  house.mtl  skydome.mtl  tree.mtl  tree.triangulated.mtl  zed.mtl
src/resources/models.obj/my/: sphere.mtl  suzanne-flat.mtl  suzanne-smooth.mtl  torus.mtl
src/resources/reslib/: CMakeLists.txt  ModelLetters.cpp  ModelLetters.h  ModelLibrary.cpp  ModelLibrary.h  building.h  resModels.cpp  resModels.h  resShaders.cpp  resShaders.h  resTMP.cpp  resTMP.h  reslib.vcxproj  reslib.vcxproj.filters  skycube.h
src/resources/shaders.glsl/: 03a-phong-single-light.frag.glsl  03b-lambertian-multiple-lights.frag.glsl  03b-phong-multiple-lights.frag.glsl  04-phong.frag.glsl  tmp.frag.glsl  tmp.vert.glsl  xtra-workaround-terrain.vert.glsl
src/resources/shaders.glsl/03/: lambertian-multiple-lights.frag.glsl  lambertian-single-light.frag.glsl  phong-multiple-lights.frag.glsl  phong-single-light.frag.glsl
src/resources/shaders.glsl/04/: lambertian.frag.glsl  normals.vert.glsl
src/resources/shaders.glsl/05/: normals-texture.vert.glsl  normals.vert.glsl  phong-texture.frag.glsl  phong.frag.glsl  texture.frag.glsl  (+7 more)
src/zpggraphics/: MyFragmentShader.cpp  MyFragmentShader.h  MyVAO.cpp  MyVAO.h  ZPGCamera.cpp  ZPGCamera.h  ZPGFragmentShader.h  ZPGShader.cpp  ZPGShaderProgram.cpp  ZPGShaderProgram.h  ZPGVAO.cpp  ZPGVAO.h  ZPGVBO.cpp  ZPGVBO.h  ZPGVertexShader.cpp  zpggraphics.vcxproj  zpggraphics.vcxproj.filters
(+20 files in other folders)
